test/tests/compiler/5_local_variables/valid/unused_exp.plx



pub fn main(none) i32 {
    2 + 2
    return 0
}
