test/tests/compiler/5_local_variables/invalid_parse/plx1_empty_function_block.plx
pub fn main(none) i32 {

}
